--- a/functions/package.json
+++ b/functions/package.json
@@ -13,9 +13,9 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.3.0",
-    "nuxt": "^2.8.0"
+    "firebase-admin": "^8.0.0",
+    "firebase-functions": "3.0.2",
+    "nuxt": "^2.8.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
